opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/avsm/ocaml-dockerfile"
doc: "https://avsm.github.io/ocaml-dockerfile/doc"
license: "ISC"
dev-repo: "https://github.com/avsm/ocaml-dockerfile.git"
bug-reports: "https://github.com/avsm/ocaml-dockerfile/issues"
tags: ["org:mirage" "org:ocamllabs"]
available: [ ocaml-version >= "4.02.3"]
depends: [
  "dune" {build} 
  "dockerfile-opam" {>="3.0.0"}
  "cmdliner"
  "fmt"
  "logs"
  "bos"
  "ppx_sexp_conv"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
