opam-version: "2.0"
synopsis: "Dockerfile eDSL - generation support"
description: """
This library provides a typed OCaml interface to generating Dockerfiles
programmatically without having to resort to lots of shell scripting and
awk/sed-style assembly.

This sublibrary has support functions for generating arrays of Dockerfiles
programmatically."""
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/ocurrent/ocaml-dockerfile"
doc: "https://ocurrent.github.io/ocaml-dockerfile/doc"
bug-reports: "https://github.com/ocurrent/ocaml-dockerfile/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.0.0"}
  "dockerfile-opam" {= version}
  "cmdliner"
  "fmt"
  "logs"
  "bos"
  "result"
  "ppx_sexp_conv" {>= "v0.9.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocurrent/ocaml-dockerfile.git"
