opam-version: "2.0"
synopsis: "Dockerfile eDSL in OCaml"
description: """
This library provides a typed OCaml interface to generating Dockerfiles
programmatically without having to resort to lots of shell scripting and
awk/sed-style assembly."""
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ocaml-dockerfile"
doc: "https://avsm.github.io/ocaml-dockerfile/doc"
bug-reports: "https://github.com/avsm/ocaml-dockerfile/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "sexplib"
  "fmt"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/avsm/ocaml-dockerfile.git"
